# supertree

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  RELEASE.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
development_road_map/M01/: M01_progress.md
scripts/: dev-tauri.mjs  validate-versions.mjs
sidecar/: package-lock.json  package.json
sidecar/src/: claude.ts  codex.ts  index.ts  protocol.ts  rpc.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260103000000_init.sql  20260103020000_add_workspace_branch_unique.sql  20260103_add_workspace_branch_unique.sql  20260103_add_workspace_ports.sql  20260104010000_add_archive_log_path.sql  20260104030000_add_sessions_created_at_index.sql  20260104_add_archive_log_path.sql  20260104_add_sessions_created_at_index.sql  20260104_add_workspace_pr_fields.sql  20260105_add_session_message_checkpoints.sql
src-tauri/src/: attachments.rs  checkpoints.rs  db.rs  git.rs  main.rs  path_utils.rs  paths.rs  repos.rs  sessions.rs  settings.rs  sidecar.rs  spotlight.rs  workspace.rs  workspace_content.rs
src/ui/: index.html  main.tsx
src/ui/components/: CommandPalette.tsx  FileOpener.tsx  TerminalPanel.tsx
src/ui/lib/: format.test.ts
src/ui/pages/: AppShell.tsx  RepositoryPage.tsx  SettingsPage.tsx  WorkspacePage.tsx  WorkspacesPage.tsx
src/ui/styles/: globals.css
src/ui/types/: repo.ts  (+2 more)
(+4 files in other folders)
