[package]
name = "supertree"
version = "0.0.0"
description = "Supertree desktop application"
authors = ["Supertree project"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
portable-pty = "0.8.1"
libc = "0.2.179"
notify = "8.2.0"
